@startuml

left to right direction
skinparam roundcorner 5
skinparam linetype ortho
skinparam shadowing false
skinparam handwritten false

skinparam class {
    BackgroundColor white
    ArrowColor #2688d4
    BorderColor #2688d4
}

!define primary_key(x) <b><color:#b8861b><&key></color> x</b>
!define foreign_key(x) <color:#aaaaaa><&key></color> x
!define column(x) <color:#efefef><&media-record></color> x
!define table(x) entity x << (T, white) >>

table( article ) {
  primary_key( id ): UUID
  column( title ): VARCHAR(255)
  column( link ): TEXT
  column( guid ): TEXT
  column( pdalink ): TEXT
  column( enclosure_url ): TEXT
  column( description ): TEXT
  column( pubDate ): DATE
  column( is_active ): BOOLEAN
  column( created_at ): timestamptz
  column( updated_at ): timestamptz
  foreign_key( source_id ): UUID <<FK>>
  foreign_key( category_id ): UUID <<FK>>
  foreign_key( author_id ): UUID <<FK>>
}
table( source ) {
  primary_key( id ): UUID
  column( title ): VARCHAR(100)
  column( is_active ): BOOLEAN
  column( created_at ): timestamptz
  column( updated_at ): timestamptz
}
table( category ) {
  primary_key( id ): UUID
  column( title ): VARCHAR(255)
  column( is_active ): BOOLEAN
  column( created_at ): timestamptz
  column( updated_at ): timestamptz
}
table( author ) {
  primary_key( id ): UUID
  column( title ): VARCHAR(100)
  column( is_active ): BOOLEAN
  column( created_at ): timestamptz
  column( updated_at ): timestamptz
}
article }|--|| source
article }|--|{ author
article }|--|{ category
@enduml

